--- a/kursspring/src/main/resources/templates/knights.html
+++ b/kursspring/src/main/resources/templates/knights.html
@@ -18,15 +18,20 @@
             <tr>
                 <td>Imie rycerza</td>
                 <td>Wiek</td>
+                <td></td>
             </tr>
         </thead>
         <tbody>
             <tr th:each="knight : ${knights}">
             <td th:text="${knight.name}"></td>
             <td th:text="${knight.age}"></td>
+            <td><a href="/knight?id=${knight.id}">Podglad</a></td>
         </tr>
         </tbody>
     </table>
+    <div class="row">
+        <a href="/newknight">Zrekrutuj nowego rycerza</a>
+    </div>
 </div>
 </body>
 </html>
