--- a/kursspring/src/main/resources/templates/knights.html
+++ b/kursspring/src/main/resources/templates/knights.html
@@ -25,7 +25,7 @@
             <tr th:each="knight : ${knights}">
             <td th:text="${knight.name}"></td>
             <td th:text="${knight.level}"></td>
-            <td><a href="${'/knight?id='+knight.id}">Podglad</a></td>
+            <td><a th:href="${'/knight?id='+knight.id}">Podglad</a></td>
         </tr>
         </tbody>
     </table>
