--- a/kursspring/src/main/resources/templates/knight.html
+++ b/kursspring/src/main/resources/templates/knight.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 <div class="container">
+
+    <p th:text="${timecomponent.time}"/>
+
     <p th:text="${knight.name}"></p>
     <p th:text="${knight.age}"></p>
     <p th:text="${knight.level}"></p>
