--- a/kursspring/src/main/resources/templates/knightform.html
+++ b/kursspring/src/main/resources/templates/knightform.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 <div class="container">
+
+    <p th:text="${timecomponent.time}"/>
+
     <form class="form-horizontal" th:object="${knight}" th:action="@{/knights}" th:method="post">
         <div class="form-group">
             <label class="control-label">Imie:</label>
@@ -22,7 +25,7 @@
             <input type="text" class="form-control" th:field="*{age}"/>
         </div>
         <div class="row">
-            <button type="submit" class="btn btn-default">Utworz rycerza</button>
+            <button type="submit" class="btn btn-default">Utworz nowego rycerza</button>
         </div>
     </form>
 </div>
