--- a/kursspring/src/main/resources/templates/knights.html
+++ b/kursspring/src/main/resources/templates/knights.html
@@ -13,11 +13,13 @@
 <body>
 <div class="container">
 
+    <p th:text="${timecomponent.time}"/>
+
     <table class="table">
         <thead>
             <tr>
                 <td>Imie rycerza</td>
-                <td>Wiek</td>
+                <td>Poziom</td>
                 <td></td>
             </tr>
         </thead>
@@ -26,6 +28,7 @@
             <td th:text="${knight.name}"></td>
             <td th:text="${knight.level}"></td>
             <td><a th:href="${'/knight?id='+knight.id}">Podglad</a></td>
+            <td><a th:href="${'/knight/delete/'+knight.id}">Usun</a></td>
         </tr>
         </tbody>
     </table>
