--- a/kursspring/src/main/resources/templates/knight.html
+++ b/kursspring/src/main/resources/templates/knight.html
@@ -13,7 +13,8 @@
 <body>
 <div class="container">
 
-    <p th:text="${timecomponent.time}"/>
+    Aktualny czas <span th:text="${timecomponent.time}"/>
+    Posiadane zloto <span th:text="${playerinformation.gold}"/>
 
     <p th:text="${knight.name}"></p>
     <p th:text="${knight.age}"></p>
