--- a/kursspring/src/main/resources/templates/knights.html
+++ b/kursspring/src/main/resources/templates/knights.html
@@ -13,7 +13,8 @@
 <body>
 <div class="container">
 
-    <p th:text="${timecomponent.time}"/>
+    Aktualny czas <span th:text="${timecomponent.time}"/>
+    Posiadane zloto <span th:text="${playerinformation.gold}"/>
 
     <table class="table">
         <thead>
