--- a/kursspring/src/main/resources/templates/knights.html
+++ b/kursspring/src/main/resources/templates/knights.html
@@ -21,13 +21,17 @@
             <tr>
                 <td>Imie rycerza</td>
                 <td>Poziom</td>
-                <td></td>
+                <td>Zadanie</td>
             </tr>
         </thead>
         <tbody>
             <tr th:each="knight : ${knights}">
             <td th:text="${knight.name}"></td>
             <td th:text="${knight.level}"></td>
+                <td>
+                    <span th:if="${knight.quest==null}" th:text="'Brak aktualnego zadania'"/>
+                    <span th:if="${knight.quest!=null}" th:text="${knight.quest.description}"/>
+                </td>
             <td><a th:href="${'/knight?id='+knight.id}">Podglad</a></td>
             <td><a th:href="${'/knight/delete/'+knight.id}">Usun</a></td>
         </tr>
