--- a/kursspring/src/main/resources/templates/assignQuest.html
+++ b/kursspring/src/main/resources/templates/assignQuest.html
@@ -14,19 +14,14 @@
 <div class="container">
 
     <form class="form-horizontal" th:object="${knight}" th:action="@{/assignQuest}" th:method="post">
-        <input type="hidden" th:field="*{id}"/>
-        <input type="hidden" th:field="*{name}"/>
-        <input type="hidden" th:field="*{age}"/>
-        <input type="hidden" th:field="*{level}"/>
-
         <div class="form-group">
-            <label class="control-label">Wykonaj zadanie</label>
+            <label class="control-label">Wykonaj zadanie:</label>
             <select th:field="*{quest}">
-                    <option th:each="quest : ${notStartedQuest}"
-                            th:value="${quest}"
-                            th:text="${quest.description}"></option>
-            </select>
+                <option th:each="quest : ${notStartedQuest}"
+                        th:value="${quest}"
+                        th:text="${quest.description}"></option>
 
+            </select>
         </div>
 
         <div class="row">
